# NOP

./: .gitignore
algorithm/: algorithm.hpp
algorithm/algo_base/: all_of.hpp  any_of.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  equal.hpp  fill.hpp  fill_n.hpp  find.hpp  find_if.hpp  find_if_not.hpp  for_each.hpp  for_each_n.hpp  generate.hpp  generate_n.hpp  iter_swap.hpp  lexicographical_compare_three_way.hpp  max_element.hpp  mismatch.hpp  move.hpp  move_backward.hpp  none_of.hpp  replace.hpp  replace_copy.hpp  replace_copy_if.hpp  replace_if.hpp  search.hpp  swap.hpp  swap_ranges.hpp  transform.hpp
base/: attributes.hpp  func_keyword.hpp  nil_keyword.hpp  types.hpp  utils.hpp
bit/: types.hpp
bit/bitset/: CMakeLists.txt
bit/bitset/include/: bitset.hpp
bit/bitset/src/: main.cpp
bit/bvector/: CMakeLists.txt
bit/bvector/include/: bvector.hpp  bvector_extensions.hpp
bit/bvector/src/: main.cpp
container/adaptor/stack/: stack.hpp
container/array/: array.hpp  array_base.hpp  array_impl.hpp
container/dynamic_bitset/: CMakeLists.txt  dynamic_bitset.hpp  dynamic_bitset_extension.hpp  undef_dynamic_bitset_extension.hpp
container/dynamic_bitset/test/: test.cpp
container/inplace_stack/: inplace_stack.hpp  inplace_stack_base.hpp  inplace_stack_impl.hpp
container/inplace_string/: inplace_string.hpp  inplace_string_base.hpp  inplace_string_impl.hpp
container/inplace_vector/: inplace_vector.hpp  inplace_vector_base.hpp  inplace_vector_impl.hpp
container/stack/: stack.hpp
csv/: CMakeLists.txt
csv/csv/: test5.csv  test6.csv  test7.csv  test8.csv
csv/csv_tests/: test1.csv  test2.csv
csv/include/: command.hpp  exception.hpp  parser.hpp
csv/src/: command.cpp  exception.cpp  main.cpp  test.cpp
exception/: exception.cpp  exception.hpp
forward_list/: forward_list.hpp
inplace_stack/: inplace_stack.hpp  inplace_stack_base.hpp  inplace_stack_impl.hpp
inplace_vector/: inplace_vector.hpp  inplace_vector_base.hpp
iterator/: iterator.hpp
matrix/cblas_matrix/: main.c  matrix.c
matrix/include/: matrix.h
matrix/src/: avx_matrix.c  main.c  matrix.c
memory/: CMakeLists.txt  auto_ptr.hpp  auto_ptr_base.hpp  auto_ptr_impl.hpp  default_deleter.hpp  nop_memcpy.h  nop_memcpy.s  nop_memset.h  nop_memset.s  unique_ptr.hpp  unique_ptr_base.hpp  unique_ptr_impl.hpp
memory/asm/: nop_memcpy.asm
memory/include/: smart_ptr.hpp
memory/src/: main.cpp
type_traits/: add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_rvalue_reference.hpp  basic_traits.hpp  is_const.hpp  is_lvalue_reference.hpp  is_pointer.hpp  is_rvalue_reference.hpp  is_same.hpp  is_void.hpp  is_volatile.hpp  remove_const.hpp  remove_cv.hpp  remove_pointer.hpp  remove_reference.hpp  remove_volatile.hpp  type_identity.hpp
utility/: CMakeLists.txt
utility/include/: utility.hpp
utility/src/: main.cpp
vector/: CMakeLists.txt
vector/include/: impl_bvector.hpp  impl_vector.hpp  impl_vector_extension.hpp  undef_impl_vector_extension.hpp  undef_vector_bool_extension.hpp  undef_vector_extensions.hpp  undef_vector_macro_definitions.hpp  vector.hpp  vector_bool_extension.hpp  vector_extensions.hpp  vector_macro_definitions.hpp
vector/src/: test.cpp
